index.css
/*
1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}
/*
Typographic tweaks!
3. Add accessible line-height
4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
5. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
7. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
8. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

body {
  background-color: hsl(210, 46%, 95%);
  font-family: 'Manrope', sans-serif;
}

main {
  display: flex;
  width: 100vw;
  height: 100vh;
  justify-content: center;
  align-items: center;
}

.card {
  display: flex;
  flex-direction: row;
  background-color: #fff;
  width: 100%;
  max-width: 40rem;
  border-radius: 0.8rem;
  /* overflow: hidden; */
}

.article-image {
  width: 100%;
  height: 100%;
  object-position: 0%;
  object-fit: cover;
  border-radius: 0.8rem 0 0 0.8rem;
}

.content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 2rem;
}

.content p {
  font-size: 0.8125rem;
}

.avatar {
  width: 2rem;
  border-radius: 50%;
}

footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.author {
  display: flex;
  flex-direction: row;
  gap: 1rem;
}

.bold {
  font-weight: 700;
  color: hsl(217, 19%, 35%);
}

.light {
  font-weight: 500;
  color: hsl(214, 17%, 51%);
}

.share-icon {
  background-color: hsl(210, 46%, 95%);
  padding: 0.5rem;
  border-radius: 50%;
  cursor: pointer;
  border: none;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltip-content {
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  width: 8rem;
  background-color: hsl(217, 19%, 35%);
  color: hsl(212, 23%, 69%);
  text-align: center;
  padding: 2rem;

  position: absolute;
  top: -1rem;
  height: 3rem;
  width: max-content;
  border-radius: 0.8rem;
  left: 50%;
  transform: translateX(-50%) translateY(-100%);
  gap: 1rem;
}

.tooltip.active .tooltip-content {
  display: flex;
  visibility: visible;
  justify-content: space-evenly;
}

.tooltip-content::after {
  content: '';
  position: absolute;
  top: 100%;
  left: 50%;
  border: 1rem solid transparent;
  border-top-color: hsl(217, 19%, 35%);
  transform: translateX(-50%);
}

.tooltip-icon {
  display: inline-block;
  min-width: 1rem;
}

/* Removes outline around button when using ESC key to close tooltip */
button.share-icon:focus {
  outline: none;
}

@media only screen and (max-width: 768px) {
  main {
    display: flex;
    padding: 1rem;
  }
  .card {
    flex-direction: column;
    max-width: 30rem;
  }

  .article-image {
    border-radius: 1rem 1rem 0 0;
  }
}

